feat: share office with generated short_url (fix: #53)
